--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,2 @@
 useDynLib(crc32c, .registration = TRUE)
-#importFrom(Rcpp, evalCpp)
-## export all regularly named functions
-## (but allow for private functions whose name starts with a dot).name <- function(...)
-exportPattern("^[[:alpha:]]+")
+export(crc32c)
